--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation 'com.android.support:design:29'
 
     implementation "androidx.drawerlayout:drawerlayout:1.0.0"
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.0.0"
 
 }
