--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
 
     implementation "androidx.drawerlayout:drawerlayout:1.0.0"
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.0.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
 }
