--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name="id.ac.ui.cs.mobileprogramming.refo_ilmiya_akbar.doitnow.GlobalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -36,7 +37,6 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".BackgroundServiceActivity" />
         <activity android:name=".TaskDetailActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".LoginActivity" />
