added data binding for tasks recyclerview, layout dynamic sample (workout)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
 
         <activity android:name=".TaskDetailActivity" />
         <activity android:name=".ProfileActivity" />
+        <activity android:name=".WorkoutActivity"/>
+        <activity android:name=".WorkoutDetailActivity"/>
         <activity android:name=".LoginActivity" />
         <activity android:name=".TodoListActivity" />
         <activity android:name=".AddTaskActivity" />
